# langhuan

./: .gitignore  LICENSE  NOTICE  build.gradle.kts  detekt.yml  flutter_rust_bridge.yaml  gradle.properties  pubspec.yaml  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: Version.kt  dokka-conventions.gradle.kts  java-conventions.gradle.kts  kotlin-conventions.gradle.kts  license-conventions.gradle.kts  testing-conventions.gradle.kts  version-conventions.gradle.kts
core/: build.gradle.kts
core/src/main/kotlin/: module-info.java
desktop/: build.gradle.kts
docs/: error-handling.md  ui-design-spec.md
docs/book-sources/: README.md  biquge-tw.lua  login-handler-example.lua
gradle/: libs.versions.toml
lib/: app.dart  main.dart  rust_init.dart
lib/features/bookshelf/: book_detail_page.dart  book_providers.dart  bookshelf_error_l10n.dart  bookshelf_page.dart  bookshelf_provider.dart  reader_page.dart  reader_settings_provider.dart  reading_progress_provider.dart  search_page.dart
lib/features/bookshelf/widgets/: base_reader_view.dart  chapter_content_manager.dart  chapter_loader.dart  chapter_status_block.dart  chapter_window_manager.dart  feed_selector.dart  horizontal_reader_view.dart  page_breaker.dart  page_content_view.dart  widgets.dart  (+8 more)
lib/features/feeds/: add_feed_provider.dart  add_feed_sheet.dart  feed_auth_page.dart  feed_providers.dart  feed_service.dart  feeds_page.dart  search_provider.dart
lib/features/settings/: settings_page.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/router/: app_router.dart
lib/shared/: app_service.dart  constants.dart
lib/shared/utils/: always_disabled_focus_node.dart  delete_with_undo.dart  utils.dart
lib/shared/widgets/: cover_image.dart  cover_placeholder.dart  empty_state.dart  error_state.dart  main_scaffold.dart  meta_row.dart  option_row.dart  widgets.dart
native/: README.md
native/hub/: Cargo.toml
native/hub/locales/: en.yml  messages.yml  zh.yml
native/hub/src/: lib.rs
native/hub/src/actors/: app_data_actor.rs  bookmark_actor.rs  bookshelf_actor.rs  feed_actor.rs  locale_actor.rs  login_actor.rs  mod.rs  reading_progress_actor.rs  registry_actor.rs  stream_actor.rs
native/hub/src/api/: app_data.rs  auth.rs  bookmark.rs  bookshelf.rs  cleanup.rs  feed_stream.rs  init.rs  locale.rs  mod.rs  reading_progress.rs  registry.rs  types.rs
native/hub/src/signals/: auth.rs  bookshelf.rs  common.rs  feed_stream.rs  locale.rs  mod.rs  reading_progress.rs  registry.rs
native/langhuan/: Cargo.toml
native/langhuan/src/: error.rs  feed.rs  lib.rs  model.rs
native/langhuan/src/auth/: mod.rs  models.rs  storage.rs
native/langhuan/src/bookshelf/: local.rs  mod.rs  models.rs  storage.rs
native/langhuan/src/cache/: mod.rs  models.rs  storage.rs
native/langhuan/src/feed/: auth_flow.rs  meta.rs  mod.rs  traits.rs
native/langhuan/src/progress/: models.rs  storage.rs
native/langhuan/src/script/: engine.rs  lua_feed.rs  meta.rs  mod.rs  registry.rs
native/langhuan/src/script/lua/: feed.rs  mod.rs
native/langhuan/src/script/modules/: html.rs  mod.rs
native/langhuan/src/script/runtime/: engine.rs  mod.rs
native/langhuan/src/script/runtime/modules/: error.rs  html.rs  json.rs  mod.rs
native/langhuan/src/script/source/: downloader.rs  mod.rs
native/langhuan/src/util/: fs.rs  path_key.rs
native/langhuan/tests/: biquge_tw.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle
test/: widget_test.dart
test/features/feeds/: bookshelf_notifier_test.dart
(+107 files in other folders)
