[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
langhuan = { path = "../langhuan" }
rinf = "8.10.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt", "join-map"] }
async-trait = "0.1.87"
messages = "0.3.1"
rust-i18n = "3"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
