[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
wildcard_imports = "deny"

[dependencies]
langhuan = { path = "../langhuan" }
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "time", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt", "join-map"] }
async-trait = "0.1.87"
messages = "0.3.1"
rust-i18n = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
rustls-platform-verifier = { version = "0.6.2", features = ["jni"] }
paranoid-android = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.3"

[dev-dependencies]
tempfile = "3"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
