[package]
name = "langhuan"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[lints.clippy]
wildcard_imports = "deny"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send", "serde", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "time"] }
thiserror = "2"
tokio-stream = "0.1"
async-stream = "0.3"
