[package]
name = "langhuan"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[lints.clippy]
wildcard_imports = "deny"

[dependencies]
mlua = { version = "0.11", features = [
    "lua54",
    "vendored",
    "async",
    "send",
    "serde",
    "macros",
] }
reqwest = { version = "0.13", features = ["query"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "fs"] }
toml = "1.1"
thiserror = "2"
tokio-stream = "0.1"
async-stream = "0.3"
scraper = { version = "0.26", features = ["atomic"] }
ego-tree = "0.11"

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["full"] }
